# mreg-cli

./: .gitattributes  .gitignore  .markdownlint.json  .travis.yml  AUTHORS  CHANGELOG  CHANGELOG.md  CLAUDE.md  CONTRIBUTING  README.md  TODO  cli.conf  cli.py  client.py  commands.py  config.py  configurations.py  exceptions.py  history.py  host.py  log.py  main.py  prototype.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.cfg  setup.py  setup_americandad  setup_familyguy  setup_test  teardown_test  test_commands  testsuite  testsuite-result.json  tox.ini  util.py  zone.py
.github/workflows/: publish.yml  test.yml
ci/: Dockerfile  admin.py  diff.py  docker-compose.yml  local_settings.py  run_testsuite_and_record.sh  run_testsuite_and_record_V2.sh  testsuite  testsuite-result.json
data/: mreg-cli.conf
mh_log/: _Logger.py  __init__.py  levels.py  log.py
mreg-cli/: cli.conf  cli.py  config.py  dhcp.py  exceptions.py  history.py  host.py  log.py  main.py  network.py  teardown_test  util.py  zone.py
mreg_cli/: __about__.py  __init__.py  __init__.pyi  __main__.py  _version.py  bacnet.py  cache.py  choices.py  cli.conf  cli.py  config.py  dhcp.py  dirs.py  errorbuilder.py  exception_handler.py  exceptions.py  group.py  help_formatter.py  history.py  history_log.py  host.py  label.py  log.py  log.pyi  main.py  mocktraffic.py  network.py  outputmanager.py  permission.py  policy.py  prompt.py  recorder.py  recordhttp.py  setup_test  srctest  subnet.py  tables.py  tags.txt  teardown_test  tokenfile.py  (+3 more)
mreg_cli/api/: __init__.py  abstracts.py  endpoints.py  errors.py  fields.py  history.py  models.py
mreg_cli/commands/: __init__.py  base.py  cache.py  dhcp.py  group.py  help.py  host.py  label.py  logging.py  network.py  permission.py  policy.py  recording.py  registry.py  root.py  zone.py
mreg_cli/commands/host_submodules/: __init__.py  a_aaaa.py  bacnet.py  cname.py  core.py  rr.py
mreg_cli/output/: __init__.py  base.py  cache.py  group.py  history.py  host.py  meta.py  network.py  policy.py  zone.py
mreg_cli/utilities/: __init__.py  api.py  fs.py  history.py  host.py  network.py  output.py  shared.py  validators.py  zone.py
tests/: conftest.py  test_cache.py  test_config.py  test_errorbuilder.py  test_exceptions.py  test_log.py  test_main.py  test_outputmanager.py  test_prompt.py  test_tokenfile.py  test_types.py  utils.py
tests/api/: test_client.py  test_fields.py  test_models.py
tests/commands/: test_host.py
tests/utilities/: test_api.py  test_fs.py
