[metadata]
name = mreg-cli
description = mreg interactive command line client
long-description = file: README.md
long-description-content-type = text/markdown
url = 'https://github.com/usit-gd/mreg-cli/'
# author = ''
# author-email = ''
# license = GPLv3
# license-file = COPYING
classifiers =
    Programming Language :: Python :: 3.11
